2010-12-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* configure:	Regenerated to use latest TEA tcl.m4.
			Better building on OpenBSD.

2010-12-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* Makefile.in: Make .SUFFIXES work for more (BSD) make programs.

2010-12-14  Jan Nijtmans <nijtmans@users.sf.net>

	* configure: Regenerated to use latest TEA tcl.m4.
	This adds cross-compile support to UNIX and Win, and
	support for building 64-bit executables with mingw-w64
	build tools.

2010-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (valgrind): add valgrind sample targets

2010-08-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (PKG_CFLAGS): remove -DBUILD_sample as that is
	auto-defined in TEA 3.9
	* configure, configure.in: update TEA 3.9

2010-08-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: update TEA 3.8
	* Makefile.in (VPATH): add macosx.

2010-08-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: TEA 3.8 update, just include tcl.m4,
	modify TEA_INIT version and run autoconf 2.59

2010-04-30  Donal K. Fellows  <dkf@defiant.rcs.manchester.ac.uk>

	* doc/sha1.n: [Bug 2994714]: Updated documentation formatting to more
	closely follow Tcl's best practice guidelines in many aspects.

2010-04-29  Jan Nijtmans <nijtmans@users.sf.net>

	* doc/sha1.n [Enh 2788534]: add package require to doc

2010-04-23  Jan Nijtmans <nijtmans@users.sf.net>

	* configure: Regenerated to use latest TEA tcl.m4.
	* [Bug 2782806]: sample package's test cases fail
	Always define BUILD_sample, even on UNIX.

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags for threaded builds on OpenBSD.
	* configure: Regenerated to use latest TEA tcl.m4.

2010-01-19  Jan Nijtmans <nijtmans@users.sf.net>

	* configure: Regenerated to use latest TEA tcl.m4.

2009-04-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl.m4 (TEA_CONFIG_CFLAGS): harden the check to add _r to CC on AIX
	with threads.
